# examples

./: .dockerignore  .env.example  .gitignore  Dockerfile.gpu  OrpheusStreamingPlayerAdvanced.swift  Orpheus_FastAPI_Colab_Deploy.ipynb  README.md  SwiftStreamingTTSClient.swift  System_Prompt.md  angry_visitor.py  app.py  deploy.sh  deploy_all.sh  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  stream_test.py  swift-example.swift  tailwind.config.js  vite.config.ts
.bolt/: prompt
1-first-cortex-deployment/: cerebrium.toml  config.yaml  main.py  pkglist.txt  requirements.txt
1-stable-diffusion/: main.py
1. Stable Diffusion/: cerebrium-deploy  main.py  requirements.txt
10-pygmalion-6B/: main.py  requirements.txt
10-sdxl/: cerebrium.toml  main.py
10-sdxl-refiner/: cerebrium.toml  main.py
11-deepfloyd-text-image-model/: main.py  requirements.txt
11-dolly-12b/: main.py  requirements.txt
11-whisper-transcription/: cerebrium.toml  main.py  requirements.txt  util.py
12-comfyui/: cerebrium.toml  helpers.py  main.py  model.json  workflow.json  workflow_api.json
12-llama-7B/: main.py  requirements.txt
13-deploy-a-finetuning/: main.py
13-dolly-12b/: main.py  (+1 more)
4-integrations/3-langraph/: .gitignore  Dockerfile  README.md  cerebrium.toml  langgraph.json  main.py  pyproject.toml
4-integrations/3-langraph/.github/workflows/: integration-tests.yml
4-integrations/3-langraph/src/: .env.example  server.py
4-integrations/3-langraph/src/react_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
4-integrations/3-langraph/tests/cassettes/: 103fe67e-a040-4e4e-aadb-b20a7057f904.yaml
4-integrations/3-langraph/tests/integration_tests/: test_graph.py
4-integrations/3-langraph/tests/unit_tests/: test_configuration.py
(+505 files in other folders)
